updating the auth flow for twitter
